--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -6,12 +6,14 @@ sunsurfers:
         - 127.0.0.1:8000:8000
     volumes:
         - ./static:/static
+        - ./media:/media
     environment:
         POSTGRES_HOST: postgres
         POSTGRES_USER: www-data
         POSTGRES_PORT: 5432
         POSTGRES_PASSWORD: ''
         STATIC_ROOT: /static
+        MEDIA_ROOT: /media
         TGAUTH_BOT: sunmapbot
         TGAUTH_DOMAIN: sunmap.ei-grad.ru
         TGAUTH_WEBHOOK_SUFFIX: ...  # put a short random string here and use `./manage.py setwebhook`
